adoption list edit completion

--- a/adoption.html
+++ b/adoption.html
@@ -64,7 +64,7 @@
     <div class="overlay hidden"></div>
     <section class="adoption__container">
       <div class="adoption__header">
-        <h1 id="adoptionTitle">Pets Available for Adoption</h1>
+        <h1 id="adoptionTitle">Pets available for adoption</h1>
       </div>
       <div class="adoption__grid" id="adoptionGrid"></div>
     </section>
@@ -74,5 +74,6 @@
     </footer>
 
     <script src="adoption.js"></script>
+    <script src="languages.json"></script>
   </body>
 </html>
