--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div class="footer__col">
           <h4 id="support">
             <span id="supportWord">Support:</span>
-            <a href="" id="email">info@petcare.uz</a>
+            <a href="" id="email">abdusamadsherkulov@gmail.com</a>
           </h4>
           <div class="footer__socials">
             <h4 id="followUsAt">Follow us at:</h4>
